# traj

./: .gitignore  CMakeLists.txt
db-1.0/: bullet_fnf.html  bullet_fnf.xlsx  bullet_fnf.xml  bullets-db-source.xml  post-import-script.sql
jbmlib/: .cproject  .project
jbmlib/src/: atmos.h  bc.h  bct.h  drag.c  drag.h  main.cpp  maxdist.c  mcdrag.h  options.h  pbrange.c  pbrange.h  traj.c  traj.h
qtwidgets/: .cproject  .project
qtwidgets/autocombo/: AutoCombo.cpp  AutoCombo.h  Makefile  autocombo.pro
qtwidgets/searchabletable/: DefaultTreeNode.h  ITreeNode.h  Makefile  TrajBulletModel.cpp  TrajBulletModel.h  autocombo.pro  main.cpp
qtwidgets/vfield/: InjectedValidator.h  Makefile  ValidateTextField.cpp  ValidateTextField.h  main.cpp  vfield.pro
traj/: .cproject  .project  CMakeLists.txt
traj-test/: .cproject  .project
traj-test/src/: DefaultTreeNode.h  main.cpp
traj/jbm/: CMakeLists.txt  atmos.c  atmos.h  bc.c  bc.h  bct.c  bct.h  bcv.c  bcv.h  drag.c  drag.h  errors.h  maxdist.c  maxdist.h  mcdrag.c  mcdrag.h  options.c  options.h  pbrange.c  pbrange.h  traj.c  traj.h  utility.h  vectors.c  vectors.h
traj/src/: Trajectory.cpp  Trajectory.h  main.cpp
traj/traj/: CMakeLists.txt  TrajAtmosphere.cpp  (+9 more)
trajdb/: .cproject  .project  CMakeLists.txt
trajdb/trajdb/: BulletData.cpp  BulletData.h  CMakeLists.txt  CaliberData.cpp  CaliberData.h  IConcept.h  MfgData.cpp  MfgData.h  TrajDatabase.cpp  TrajDatabase.h
trajgui/: .cproject  .project  CMakeLists.txt  DefaultTreeNode.h  ITreeNode.h  Makefile  TrajBulletTreeModel.cpp  TrajBulletTreeModel.h  TrajFrame.cpp  TrajFrame.h  TrajFrame.ui  TrajTableModel.cpp  TrajTableModel.h  TrajTableView.cpp  TrajTableView.h  TreeNodes.h  ValidationFields.h  main.cpp  notes.txt  qmake.launch  trajui.pro
trajui/: .cproject  .gitignore  .project  Makefile  main.cpp  qmake.launch  rc.qrc  tablemodel.cpp  tablemodel.h  tablemodel.ui  trajectoryui.cpp  trajectoryui.h  trajectoryui.ui  trajui.pro
(+3 files in other folders)
